fix: better error feedback
